--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ jenkins:
         - '50000:50000'
     volumes:
         - /srv/docker/jenkins:/var/jenkins_home \
+    environment:
+        - JAVA_OPTS=-Duser.timezone=Asia/Shanghai
     privileged: true
     links:
         - slave-java
